<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_a_new_advert"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/post_type"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="35dp">

            <RadioButton
                android:id="@+id/radio_lost"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/lost"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radio_found"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/found"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/nametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="300dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/edit_box"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phonetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/edit_box"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/descriptiontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="320dp"
        android:layout_height="77dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edit_box"
        android:gravity="start|center_vertical"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descriptiontextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/datetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_box"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetextView" />

    <TextView
        android:id="@+id/locationtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/edit_box"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationtextView" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />


</androidx.constraintlayout.widget.ConstraintLayout>