<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lost_amp_found_items"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/postTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:id="@+id/postTypeLabel"
        android:layout_width="83dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="2dp"
        android:text="@string/post_type"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/postTypeValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/postTypeValue"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="2dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nameValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="2dp"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phoneValue"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="2dp"
        android:text="@string/description"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionValue"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/dateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="2dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/dateValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/locationLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="2dp"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/locationValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationValue"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/frame"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/removebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removebutton"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginBottom="92dp"
        android:text="@string/remove"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
